src/test/resources/amyc/nameAnalyzer/passing/ParamAndLocal.amy
object ParamAndLocal
  fn foo(i: Int(32)): Int(32) = {
    val i: Int(32) = i + 1;
    i
  }
end ParamAndLocal
