src/test/resources/amyc/nameAnalyzer/failing/UndefinedFunction.amy
object UndefinedFunction
  fn foo(): Int(32) = { bar() }
end UndefinedFunction
